# cw-nft

./: Cargo.toml  README.md  config.sh  optimize  prompt  script.py
contracts/cw721-base/: Cargo.toml
contracts/cw721-base/src/: execute.rs  helpers.rs  lib.rs  msg.rs  state.rs  traits.rs
contracts/cw721-non-transferable/src/: lib.rs
contracts/song_contract/: Cargo.toml
contracts/song_contract/src/: lib.rs  notes.md
myenv/: pyvenv.cfg
src/: lib.rs
test/: mnemonic  mnemonic2  mnemonic3  mnemonic4  mnemonic5
