[package]
name = "cw-nft"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.4.0"
cosmwasm-storage = "1.3.1"
schemars = "0.8.12"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
[dev-dependencies]

cosmwasm-std = "1.4.0" 
