[package]
name = "cw721-base"
description = "Basic implementation cw721 NFTs"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Orkun Külçe <orkun@deuslabs.fi>"]
version = "0.18.0"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/your-repo-link"
homepage = "https://your-homepage-link"
documentation = "https://your-documentation-link"
rust-version = "1.58"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-ownable      = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
cw721-base-016  = { workspace = true, features = ["library"] }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
cw721-base = { path = "../../contracts/cw721-base" }
proc-macro2 = "=1.0.67"
[dev-dependencies]
cw-multi-test   = { workspace = true }
