[package]
name = "song-contract"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
cosmwasm-std = { version = "1.4.1", features = ["staking", "stargate"] }
cosmwasm = "0.7.2"
cosmwasm-vm = "1.4.1"
getrandom = { version = "0.2.8", features = ["js"] }
cw721 = "0.18.0"
cw-ownable = "0.5.1"
cw721-base = { path = "../cw721-base" }
bincode = "1.3.3"
serde_json = "1.0.107"
anyhow = "1.0.75"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.2"
derivative = "2.2.0"
itertools = "0.11.0"
prost = "0.12.1"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.49"
cw-multi-test = "0.17.0"
bincode2 ="2.0.1"
# [dev-dependencies]
# cosmwasm-schema = { version = "1.0.0-beta5" }
# cw-multi-test = "0.17.0"
# bech32 = "0.9.1"
# once_cell = "1.18.0"
# sha2 = "0.10.8"

# [patch.crates-io]
# cw-multi-test = "0.17.0"
[patch.crates-io]
cw-multi-test = "0.17.0"
